create HashMap for askQuestions